--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "bundle/syntastic"]
 	path = bundle/syntastic
 	url = https://github.com/scrooloose/syntastic.git
+[submodule "bundle/web-indent"]
+	path = bundle/web-indent
+	url = https://github.com/lukaszb/vim-web-indent.git
